# vulnforge

./: .gitignore  LICENCE  README-technical.md  README.md  SECURITY-RESEARCH-EXCEPTION.md  cli.py  pyproject.toml  workspace.py
articles/: README.md  an-injection-stage-by-stage.md  model-is-not-system.md  recall-is-not-evidence.md
audit/: __init__.py  log.py
bootstrap/: __init__.py  build_sandbox.py  fetch_cve.py  fetch_models.py
configs/: __init__.py  pipeline.yaml  stm32f405.yaml
consumers/: __init__.py  compliance.py  safety.py
cve/: cwe_map.py  index.py
docs/: README.md  contributing.md  design-choices.md  metrics.md  roadmap.md  verdict-pipeline.md
docs/architecture/: cve.md  models.md  overview.md  pipeline.md  sandbox.md  security.md  (+1 more)
extractors/: __init__.py  python.py  thumb.py
inference/: __init__.py  runner.py
orchestrator/: __init__.py  firmware.py  pipeline.py
sandbox/: Containerfile  __init__.py  qemu.py  run.py
schema/: __init__.py  audit_event.py  expected_outcome.py  hypothesis.py  observation.py  screen.py  verdict.py
stages/: __init__.py  execute.py  hypothesise.py  index.py  ingest.py  report.py  screen.py  synthesise.py  verify.py
store/: __init__.py  objects.py  refs.py
tests/: firmware_fixtures.py  test_cli.py  test_consumers_compliance.py  test_consumers_safety.py  test_cve.py  test_extractors.py  test_firmware_cli.py  test_firmware_vertical.py  test_pipeline.py  test_plumbing.py  test_probe_screen.py  test_qemu.py  test_sandbox_cleanup.py  test_screen.py  test_synthesise_parse.py  test_thumb.py  test_verify_outcomes.py
(+40 files in other folders)
